examples/c/error-codes/violates-constraint/nonfatal/CV-CDE2-bad-static.c
// Copyright (c) 2018 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.
#include <limits.h>

enum e1 {a = 0xffffffff};
enum e2 {x = INT_MAX, y, z};

int main(void){

}
